After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 673933 - Linux Context Manager leaks private symbol
Linux Context Manager leaks private symbol
Status: RESOLVED FIXED
Product: GUPnP
Classification: Other
Component: gupnp
unspecified
Other All
: Normal normal
: ---
Assigned To: GUPnP Maintainers
GUPnP Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-04-11 18:06 UTC by Andreas Henriksson
Modified: 2012-08-19 14:09 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Don't leak internal linux contex manager symbol (1.01 KB, patch)
2012-04-11 18:06 UTC, Andreas Henriksson
committed Details | Review
Declare more linux cm internal functions static (1.27 KB, patch)
2012-04-11 18:06 UTC, Andreas Henriksson
committed Details | Review

Description Andreas Henriksson 2012-04-11 18:06:41 UTC
When building GUPnP with the new CM the library gets
another public symbol which is missing if not building
with the linux CM.
The function is internal and should have been declared static.
Comment 1 Andreas Henriksson 2012-04-11 18:06:43 UTC
Created attachment 211865 [details] [review]
Don't leak internal linux contex manager symbol

When building gupnp with the linux context manager
the library gets another public symbol.
It should be relatively safe to simply make the
function declaration static to hide it.
Comment 2 Andreas Henriksson 2012-04-11 18:06:45 UTC
Created attachment 211866 [details] [review]
Declare more linux cm internal functions static

These where not leaked before because their initial
declaration declares them as static, but make the
actual function declaration static too just because
it's nice to keep declarations in sync.
Comment 3 Andreas Henriksson 2012-04-12 09:40:32 UTC
This problem has been fixed in our software repository. The fix will go into the next software release. Thank you for your bug report.
Comment 4 Jens Georg 2012-08-19 14:08:56 UTC
Attachment 211866 [details] pushed as 30bb59c - Declare more linux cm internal functions static