Don't leak internal linux contex manager symbol

When building gupnp with the linux context manager
the library gets another public symbol.
It should be relatively safe to simply make the
function declaration static to hide it.

https://bugzilla.gnome.org/show_bug.cgi?id=673933